Expanded horizontal bars to top 15 and aligned with impact traces. Search results no longer push down other page elements.

--- a/Source Code/styles.css
+++ b/Source Code/styles.css
@@ -61,6 +61,12 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    position: fixed;
+    background-color: white;
+    width: 543px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: transparent #cbcfe2 #c8cee7 #c4c7d7;
 }
 
 .searchHighlight {
